[gd_scene load_steps=7 format=3 uid="uid://dgs0fqojgcmu3"]

[ext_resource type="Script" uid="uid://ctjy0e806j0vk" path="res://entities/car/car.gd" id="1_nh45c"]
[ext_resource type="AudioStream" uid="uid://dycfldtocfi6a" path="res://entities/car/33480__hiccupvirus__stereo-tron-bike-engine.wav" id="3_x0apo"]
[ext_resource type="PackedScene" uid="uid://npanejthded5" path="res://entities/car/tron_moto_lowpoly/sketchfab_scene.tscn" id="4_hk7sx"]
[ext_resource type="Script" uid="uid://bggsg5iqltuk3" path="res://entities/car/motor_stream.gd" id="4_qxogl"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_1ang0"]
friction = 0.5
rough = true
absorbent = true

[sub_resource type="BoxShape3D" id="BoxShape3D_qxogl"]
size = Vector3(2.99533, 1, 1)

[node name="Car" type="RigidBody3D"]
mass = 10.0
physics_material_override = SubResource("PhysicsMaterial_1ang0")
continuous_cd = true
contact_monitor = true
max_contacts_reported = 4
script = ExtResource("1_nh45c")

[node name="ForwardLeft" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.435121, -1)

[node name="ForwardRight" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.435121, -1)

[node name="BackwardRight" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.435121, 1)

[node name="BackwardLeft" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.435121, 1)

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, -4.73325e-08, 0, -0.08284)
shape = SubResource("BoxShape3D_qxogl")

[node name="RaycastsRespawn" type="Node3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0)

[node name="ForwardLeftRespawn" type="RayCast3D" parent="RaycastsRespawn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, -1)

[node name="ForwardRightRespawn" type="RayCast3D" parent="RaycastsRespawn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, -1)

[node name="BackwardRightRespawn" type="RayCast3D" parent="RaycastsRespawn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 1)

[node name="BackwardLeftRespawn" type="RayCast3D" parent="RaycastsRespawn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 1)

[node name="CameraFollowPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.31962, -2.93594)

[node name="MotorStream" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_x0apo")
autoplay = true
bus = &"Motor"
script = ExtResource("4_qxogl")

[node name="Sketchfab_Scene2" parent="." instance=ExtResource("4_hk7sx")]
transform = Transform3D(-0.35, 0, -5.28485e-08, 0, 0.35, 0, 5.28485e-08, 0, -0.35, 0.0317484, -0.52664, 0)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_color = Color(0.0217323, 0.905795, 0.982301, 1)
omni_range = 3.75794

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
